--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,9 +7,10 @@
     
     <!--TailwindsCSS-->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    
+    <!--daisyUI-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet">
-    
+    <!--HTMX-->
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.7/dist/htmx.min.js" integrity="sha384-ZBXiYtYQ6hJ2Y0ZNoYuI+Nq5MqWBr+chMrS/RkXpNzQCApHEhOt2aY8EJgqwHLkJ" crossorigin="anonymous"></script>
     <!--AlpineJS-->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <!--Alpine Mask Plugin-->
@@ -25,10 +26,9 @@
     <header>
       <!-- slot[header] -->
     </header>
-    <main>
-      <div>
+    
+    <main class="flex min-h-[80vh] flex-col items-center justify-center gap-6 px-4 py-8">
         <!-- slot[content] -->
-      </div>
     </main>
 
     <footer>
