--- a/templates/partial/_header.html
+++ b/templates/partial/_header.html
@@ -1,8 +1,9 @@
 <nav x-data="{ mobileMenuIsOpen: false }" x-on:click.away="mobileMenuIsOpen = false" class="flex items-center justify-between px-6 py-4" aria-label="penguin ui menu">
 	<!-- Brand Logo -->
 	<a href="#" class="text-2xl font-bold text-neutral-900 dark:text-neutral-100">
-		<span>Peng<span class="text-black dark:text-white">ui</span>n</span>
-		<!-- <img src="./your-logo.svg" alt="brand logo" class="w-10" /> -->
+		<span class="text-black dark:text-white">
+			LOGO
+		</span>
 	</a>
 	<!-- Desktop Menu -->
 	<ul class="hidden items-center gap-4 md:flex">
