--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>Snippet with Slots</title>
     <meta charset="utf-8" />
@@ -24,15 +24,15 @@
 
   <body>
     <header>
-      <!-- slot[header] -->
+      {% include '/partial/_header.html' %}
     </header>
     
     <main class="flex min-h-[80vh] flex-col items-center justify-center gap-6 px-4 py-8">
-        <!-- slot[content] -->
+      {% block content %}{% endblock %}
     </main>
 
     <footer>
-
+      {% include '/partial/_footer.html'%}
     </footer>
 
   </body>
