--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %}
+{% extends 'layout.html' %}
 
 {% block content %}
-<h2>hello fastapi</h2>
+    {% include '/partial/video-link-form.html' %}
 {% endblock %}
