--- a/templates/partial/_footer.html
+++ b/templates/partial/_footer.html
@@ -1,1 +1,5 @@
-<small>copy rights</small>
+<small>
+    Dev by <a href="https://x.com/trkee_sa" target="_blank">
+    @Trkee_SA
+    </a>
+</small>
